src/test/ui/parser/keyword-fn-as-identifier.stderr
error: expected identifier, found keyword `fn`
  --> $DIR/keyword-fn-as-identifier.rs:4:9
   |
LL |     let fn = "foo";
   |         ^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#fn = "foo";
   |         ^^^^

error: aborting due to previous error

